[package]
name = "rocksdb-py"
version = "0.0.5"
edition = "2021"
description = "Python bindings for RocksDB"

[lib]
name = "rocksdbpy"
crate-type = ["cdylib"]

[dependencies]
rocksdb = { version = "0.21.0", features = ["snappy", "lz4", "zstd", "zlib", "bzip2"] }
pyo3 = { version = "0.19.2", features = ["extension-module"] }
