[package]
name = "rocksdb-py"
version = "0.0.1"
license = "Apache-2.0"
readme = "readme.md"
authors = ["Tarik Yilmaz <tarikyilmaz.54@gmail.com>"]
homepage = "https://github.com/trk54ylmz/rocksdb-py"
repository = "https://github.com/trk54ylmz/rocksdb-py"
description = "Python bindings for RocksDB"
keywords = ["rocksdb", "rocksdb-py"]

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[package.metadata.maturin]
classifier = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
