[project]
name = "rocksdb-py"
version = "0.0.6"
readme = "readme.md"
description = "Python bindings for RocksDB"
keywords = ["rocksdb", "rocksdb-py"]
license = {text = "MIT"}
authors = [
    {name = "Tarik Yilmaz", email = "tarikyilmaz.54@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
homepage = "https://github.com/trk54ylmz/rocksdb-py"
repository = "https://github.com/trk54ylmz/rocksdb-py"

[build-system]
requires = ["maturin>=1.7.0"]
build-backend = "maturin"
